removed StationLight from API